--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <title>WDD230: Assignment Portal</title>
 </head>
 <body>
-    <h1>This is my index test for WDD230</h1>
-    <p>Hello everyone</p>
+    <header>
+    <img alt="Image of me" src="images/best pic ever.jpg" width="200" height="250">
+    <h1> Welcome to my WDD230: Assignment Portal</h1>
+    </header>
+    <nav>
+    <dl>
+        <li><a href="lessontwo.html">Lesson 02</a></li>
+        <li><a href="lessonthree.html">Lesson 03</a></li>
+        <li><a href="lessonfour.html">Lesson 04</a></li>
+        <li><a href="lessonfive.html">Lesson 05</a></li>
+        <li><a href="lessonsix.html">Lesson 06</a></li>
+        <li><a href="lessonseven.html">Lesson 07</a></li>
+        <li><a href="lessoneight.html">Lesson 08</a></li>
+        <li><a href="lessonnine.html">Lesson 09</a></li>
+        <li><a href="lessonten.html">Lesson 10</a></li>
+        <li><a href="lessoneleven.html">Lesson 11</a></li>
+    </dl>
+    </nav>
+    <footer>
+        <p>&copy; 2023 Mike Helm Pocatello, ID</p>
+        <p>Last Modified</p>
+        <p id="date"></p>
+    </footer>
+<script src="scripts/app.js"></script>
 </body>
 </html>
