week1 and lesson2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
     <title>WDD230: Assignment Portal</title>
 </head>
 <body>
@@ -14,21 +16,20 @@
     </header>
     <nav>
     <dl>
-        <li><a href="lessontwo.html">Lesson 02</a></li>
-        <li><a href="lessonthree.html">Lesson 03</a></li>
-        <li><a href="lessonfour.html">Lesson 04</a></li>
-        <li><a href="lessonfive.html">Lesson 05</a></li>
-        <li><a href="lessonsix.html">Lesson 06</a></li>
-        <li><a href="lessonseven.html">Lesson 07</a></li>
-        <li><a href="lessoneight.html">Lesson 08</a></li>
-        <li><a href="lessonnine.html">Lesson 09</a></li>
-        <li><a href="lessonten.html">Lesson 10</a></li>
-        <li><a href="lessoneleven.html">Lesson 11</a></li>
+        <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
+        <li>Week 3: <a href="lessonthree.html"></a></li>
+        <li>Week 4: <a href="lessonfour.html"></a></li>
+        <li>Week 5: <a href="lessonfive.html"></a></li>
+        <li>Week 6: <a href="lessonsix.html"></a></li>
+        <li>Week 7: <a href="lessonseven.html"></a></li>
+        <li>Week 8: <a href="lessoneight.html"></a></li>
+        <li>Week 9: <a href="lessonnine.html"></a></li>
+        <li>Week 10: <a href="lessonten.html"></a></li>
+        <li>Week 11: <a href="lessoneleven.html"></a></li>
     </dl>
     </nav>
     <footer>
-        <p>&copy; 2023 Mike Helm Pocatello, ID</p>
-        <p>Last Modified</p>
+        <p>&copy; 2023 Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
         <p id="date"></p>
     </footer>
 <script src="scripts/app.js"></script>
