edited w1 and added to week3

--- a/index.html
+++ b/index.html
@@ -4,32 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mike H's HTML index for his BYU-I WDD230 class"> 
+    <meta name ="keywords" content="HTML, CSS, JavaScript">
+    <meta name ="Author" content="Mike Helm">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
     <title>WDD230: Assignment Portal</title>
 </head>
 <body>
     <header>
-    <img alt="Image of me" src="images/best pic ever.jpg" width="200" height="250">
+    <img alt="image" src="images/best pic ever.jpg" height="auto">
     <h1> Welcome to my WDD230: Assignment Portal</h1>
     </header>
-    <nav>
+    <main>
     <dl>
         <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Week 3: <a href="lessonthree.html"></a></li>
-        <li>Week 4: <a href="lessonfour.html"></a></li>
-        <li>Week 5: <a href="lessonfive.html"></a></li>
-        <li>Week 6: <a href="lessonsix.html"></a></li>
-        <li>Week 7: <a href="lessonseven.html"></a></li>
-        <li>Week 8: <a href="lessoneight.html"></a></li>
-        <li>Week 9: <a href="lessonnine.html"></a></li>
-        <li>Week 10: <a href="lessonten.html"></a></li>
-        <li>Week 11: <a href="lessoneleven.html"></a></li>
+        <li>Week 3: <a href="lesson3">To be delivered soon</a></li>
+        <li>Week 4: <a href="lessonfour.html">To be delivered soon</a></li>
+        <li>Week 5: <a href="lessonfive.html">To be delivered soon</a></li>
+        <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
+        <li>Week 7: <a href="lessonseven.html">To be delivered soon</a></li>
+        <li>Week 8: <a href="lessoneight.html">To be delivered soon</a></li>
+        <li>Week 9: <a href="lessonnine.html">To be delivered soon</a></li>
+        <li>Week 10: <a href="lessonten.html">To be delivered soon</a></li>
+        <li>Week 11: <a href="lessoneleven.html">To be delivered soon</a></li>
     </dl>
-    </nav>
+</main>
     <footer>
-        <p>&copy; 2023 Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
         <p id="date"></p>
     </footer>
 <script src="scripts/app.js"></script>
