fixed stuff w2, added frame for w3

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
     <dl>
         <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Week 3: <a href="lesson3">To be delivered soon</a></li>
+        <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce</a></li>
         <li>Week 4: <a href="lessonfour.html">To be delivered soon</a></li>
         <li>Week 5: <a href="lessonfive.html">To be delivered soon</a></li>
         <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
