--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Mike H's Understanding of design principles"> 
+    <meta name ="keywords" content="HTML, CSS, JavaScript">
+    <meta name ="Author" content="Mike Helm">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
@@ -45,7 +48,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
         <p id="date"></p>
     </footer>
     <script src="/wdd230/lesson2/scripts/app.js"></script>
