my normalize gets added.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
     <dl>
         <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce</a></li>
+        <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce Site Plan</a></li>
         <li>Week 4: <a href="lessonfour.html">To be delivered soon</a></li>
         <li>Week 5: <a href="lessonfive.html">To be delivered soon</a></li>
         <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
@@ -33,7 +33,7 @@
     </dl>
 </main>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified </p>
         <p id="date"></p>
     </footer>
 <script src="scripts/app.js"></script>
