--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -16,12 +16,13 @@
             <a href="target-audience.html">Target Audience</a>
             <a href="design.html">Design</a>
         </nav>
+        <h2>My purpose for this website is to show what is in Laketown in the land of Middle-Earth. </h2>
     </header>
     <main>
 
     </main>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified </p>
         <p id="date"></p>
     </footer>
     <script src="/wdd230/lesson3/scripts/app.js"></script>
