week1 header finally fixed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-    <img alt="image" src="images/best pic ever.jpg" height="auto">
+    <img alt="image" src="images/best pic ever-resized.jpg" height="auto">
     <h1> Welcome to my WDD230: Assignment Portal</h1>
     </header>
     <main>
