--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -17,6 +17,8 @@
             <a href="design.html">Design</a>
         </nav>
         <h2>My purpose for this website is to show what is in Laketown in the land of Middle-Earth. </h2>
+        <img alt="logo" src="images/laketown_logo resized.jpg"  height="auto">
+        <h3>A very simple logo, shows trees, and mountains along with a bow which the people of Laketown are known for</h3>
     </header>
     <main>
 
