--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -21,7 +21,7 @@
 
     </main>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
+        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT; Last Modified </p>
         <p id="date"></p>
     </footer>
     <script src="/wdd230/lesson3/scripts/app.js"></script>
