added normalize to week2

--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Mike H's Understanding of design principles"> 
     <meta name ="keywords" content="HTML, CSS, JavaScript">
     <meta name ="Author" content="Mike Helm">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
