week1 fixing more

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 <body>
     <header>
-    <img alt="image" src="images/best pic ever-resized.jpg" height="auto">
+    <img class="profile" alt="image" src="images/best pic ever-resized.jpg" height="auto">
     <h1> Welcome to my WDD230: Assignment Portal</h1>
     </header>
     <main>
-    <dl>
+    
         <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce Site Plan</a></li>
         <li>Week 4: <a href="lessonfour.html">To be delivered soon</a></li>
@@ -30,7 +30,7 @@
         <li>Week 9: <a href="lessonnine.html">To be delivered soon</a></li>
         <li>Week 10: <a href="lessonten.html">To be delivered soon</a></li>
         <li>Week 11: <a href="lessoneleven.html">To be delivered soon</a></li>
-    </dl>
+
 </main>
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified </p>
