week3 html and css + other stuff

--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 </head>
 <body>
     <header>
-    <img class="profile" alt="image" src="images/best pic ever-resized.jpg" height="auto">
+    <img class="profile" src="images/best pic ever-resized.jpg" alt="image" height="auto">
     <h1> Welcome to my WDD230: Assignment Portal</h1>
     </header>
     <main>
-    
-        <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
-        <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce Site Plan</a></li>
-        <li>Week 4: <a href="lessonfour.html">To be delivered soon</a></li>
-        <li>Week 5: <a href="lessonfive.html">To be delivered soon</a></li>
-        <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
-        <li>Week 7: <a href="lessonseven.html">To be delivered soon</a></li>
-        <li>Week 8: <a href="lessoneight.html">To be delivered soon</a></li>
-        <li>Week 9: <a href="lessonnine.html">To be delivered soon</a></li>
-        <li>Week 10: <a href="lessonten.html">To be delivered soon</a></li>
-        <li>Week 11: <a href="lessoneleven.html">To be delivered soon</a></li>
-
+        <dl>
+            <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
+            <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce Site Plan</a></li>
+            <li>Week 4: <a href="lessonfour.html">To be delivered soon</a></li>
+            <li>Week 5: <a href="lessonfive.html">To be delivered soon</a></li>
+            <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
+            <li>Week 7: <a href="lessonseven.html">To be delivered soon</a></li>
+            <li>Week 8: <a href="lessoneight.html">To be delivered soon</a></li>
+            <li>Week 9: <a href="lessonnine.html">To be delivered soon</a></li>
+            <li>Week 10: <a href="lessonten.html">To be delivered soon</a></li>
+            <li>Week 11: <a href="lessoneleven.html">To be delivered soon</a></li>
+        </dl>
 </main>
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified </p>
