--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -7,10 +7,16 @@
     <meta name ="keywords" content="HTML, CSS, JavaScript">
     <meta name ="Author" content="Mike Helm">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design!</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <title>Laketown Chamber of Commerce - Design</title>
 </head>
 <body>
     <header>
+        <img id="logo" src="images/laketown_logo resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
+        <h1>Website Planning Doc: Chamber of Commmerce</h1>
         <nav>  
             <a href="index.html">Home</a>
             <a href="target-audience.html">Target Audience</a>
@@ -18,7 +24,19 @@
         </nav>
     </header>
     <main>
+        <h2>
+            Color Scheme
+        </h2>
+        <p>
+            <a href="https://coolors.co/413620-9c6615-9f7833-ffd791-cdd1de" target="_blank"><img src="images/Laketown_scheme.jpg" alt="color scheme"></a>
+        </p>
 
+        <h2>
+            Typography
+        </h2>
+        <p>
+            <a href="https://fonts.google.com/share?selection.family=Macondo%7CUnifrakturMaguntia" target="_blank"><span class="Macondo">Macondo, </span> <span class="UnifrakturMaguntia">UnifrakturMaguntia</span></a>
+        </p>
     </main>
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT; Last Modified </p>
