--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -7,21 +7,40 @@
     <meta name="description" content="Homepage for the city of Laketown in Middle-Earth"> 
     <meta name ="keywords" content="HTML, CSS, JavaScript">
     <meta name ="Author" content="Mike Helm">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
     <title>Laketown Chamber of Commerce</title>
 </head>
 <body>
     <header>
+        <img id="logo" src="images/laketown_logo resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
+        <h1>Website Planning Doc: Chamber of Commmerce</h1>
         <nav>  
             <a href="index.html">Home</a>
             <a href="target-audience.html">Target Audience</a>
             <a href="design.html">Design</a>
         </nav>
-        <h2>My purpose for this website is to show what is in Laketown in the land of Middle-Earth. </h2>
-        <img alt="logo" src="images/laketown_logo resized.jpg"  height="auto">
-        <h3>A very simple logo, shows trees, and mountains along with a bow which the people of Laketown are known for</h3>
     </header>
     <main>
-
+        <h2>
+            Site name
+        </h2>
+        <h3>
+            Laketown Chamber of Commerce
+        </h3>
+        <h2>
+            Purpose
+        </h2>
+        <p>
+            This site will serve as a public source of information for the Laketown, Rhovanion, Middle-Earth Chamber of Commerce
+        </p>
+        <h2>
+            Logo
+        </h2>
+        <img id="logo" src="images/laketown_logo resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce.">
+        <p>A very simple logo, shows trees, and mountains along with a bow which the people of Laketown are known for. This was put together using paint3d by taking free clipart off google searches. </p>
     </main>
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified </p>
