--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -7,19 +7,56 @@
     <meta name ="keywords" content="HTML, CSS, JavaScript">
     <meta name ="Author" content="Mike Helm">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Target Audience of who I want to be coming to visit my town</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <title>Laketown Chamber of Commerce - Target Audience</title>
 </head>
 <body>
     <header>
+        <img id="logo" src="images/laketown_logo resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
+        <h1>Website Planning Doc: Chamber of Commmerce</h1>
         <nav>  
             <a href="index.html">Home</a>
             <a href="target-audience.html">Target Audience</a>
             <a href="design.html">Design</a>
         </nav>
-        <h2></h2>
     </header>
     <main>
+        <h2>
+            Target Audience
+        </h2>
+        <p>
 
+        </p>
+        <h4>
+            Personas
+        </h4>
+        <p>
+            Johan the miner -</br> Young(ish) human male. Came from Rohan after hearing that Smaug was gone. Decided that he was going to head north and hopefully strike it rich in those lands that desperately need taming.
+        </p>
+        <p>
+            Caeliwythe the Elven Merchant -</br> No one really knows how old this elf is, he won't say truthfully either. Came from Lothlorien to visit his family in Murkwood but realized that the travelers coming through from the Misty Mountains were worn and did not have as much in the way of supplies to make it through.
+        </p>
+        <h4>
+            Scenarios
+        </h4>
+        <p>
+            Johan is looking to potentially open a new mine in the Misty Mountains after hearing that the dreaded Smaug has been vanquished and the mountains are once again free to mine. He needs to know who to talk to to get the proper permits to be able to stake a claim and set up in the hills
+        </p>
+        <p>
+            Caeliwythe is looking to set up a trading post outside of the town and needs advice on who they need to speak to in order to be able to set up shop to help travelers headed between the Misty Mountains and Murkwood.
+        </p>
+        <p>
+            A fur trader is looking to set up a trophy shop, and do taxidermy for the more wealthy members of the town and area and needs to know how to purchase land in the town for a shop and what permits are needed as well
+        </p>
+        <p>
+            Someone is coming to stay in the fabled Laketown Inn that housed the hobbit and dwarves that fought in the War of the Five armies over the dragons hoarded treasure, and wants information on good hiking trails
+        </p>
+        <p>
+            Smeagol is coming through town looking for a trail of where the "filthy stinking hobbitses" went and how he can easily navigate through the busy town.
+        </p>
     </main>
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &lt;(^.^)> Last Modified </p>
