fixed wave issues and html errors

--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="images/laketown_logo resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
+        <img id="logo" src="images/laketown_logo_resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
         <h1>Website Planning Doc: Chamber of Commmerce</h1>
         <nav>  
             <a href="index.html">Home</a>
@@ -41,7 +41,6 @@
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT; Last Modified </p>
         <p id="date"></p>
-    </footer>
     <script src="/wdd230/lesson3/scripts/app.js"></script>
     </footer>
 </body>
