--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="images/laketown_logo resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
+        <img id="logo" src="images/laketown_logo_resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
         <h1>Website Planning Doc: Chamber of Commmerce</h1>
         <nav>  
             <a href="index.html">Home</a>
@@ -30,18 +30,18 @@
         <p>
 
         </p>
-        <h4>
+        <h3>
             Personas
-        </h4>
+        </h3>
         <p>
-            Johan the miner -</br> Young(ish) human male. Came from Rohan after hearing that Smaug was gone. Decided that he was going to head north and hopefully strike it rich in those lands that desperately need taming.
+            Johan the miner -<br> Young(ish) human male. Came from Rohan after hearing that Smaug was gone. Decided that he was going to head north and hopefully strike it rich in those lands that desperately need taming.
         </p>
         <p>
-            Caeliwythe the Elven Merchant -</br> No one really knows how old this elf is, he won't say truthfully either. Came from Lothlorien to visit his family in Murkwood but realized that the travelers coming through from the Misty Mountains were worn and did not have as much in the way of supplies to make it through.
+            Caeliwythe the Elven Merchant -<br> No one really knows how old this elf is, he won't say truthfully either. Came from Lothlorien to visit his family in Murkwood but realized that the travelers coming through from the Misty Mountains were worn and did not have as much in the way of supplies to make it through.
         </p>
-        <h4>
+        <h3>
             Scenarios
-        </h4>
+        </h3>
         <p>
             Johan is looking to potentially open a new mine in the Misty Mountains after hearing that the dreaded Smaug has been vanquished and the mountains are once again free to mine. He needs to know who to talk to to get the proper permits to be able to stake a claim and set up in the hills
         </p>
@@ -61,7 +61,6 @@
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &lt;(^.^)> Last Modified </p>
         <p id="date"></p>
-    </footer>
     <script src="/wdd230/lesson3/scripts/app.js"></script>
     </footer>
 </body>
