--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="images/laketown_logo resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
+        <img id="logo" src="images/laketown_logo_resized.jpg" alt="The logo for the Laketown, Middle-Earth Chamber of commerce">
         <h1>Website Planning Doc: Chamber of Commmerce</h1>
         <nav>  
             <a href="index.html">Home</a>
@@ -39,13 +39,12 @@
         <h2>
             Logo
         </h2>
-        <img id="logo" src="images/laketown_logo resized.jpg"  alt="The logo for the Laketown, Middle-Earth Chamber of commerce.">
+        <img id="logo" src="images/laketown_logo_resized.jpg" alt="The logo for the Laketown, Middle-Earth Chamber of commerce.">
         <p>A very simple logo, shows trees, and mountains along with a bow which the people of Laketown are known for. This was put together using paint3d by taking free clipart off google searches. </p>
     </main>
     <footer>
         <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified </p>
         <p id="date"></p>
-    </footer>
     <script src="/wdd230/lesson3/scripts/app.js"></script>
     </footer>
 </body>
