changed apps for all 3 projects, adjusted footer

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -43,8 +43,7 @@
         <p>A very simple logo, shows trees, and mountains along with a bow which the people of Laketown are known for. This was put together using paint3d by taking free clipart off google searches. </p>
     </main>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified </p>
-        <p id="date"></p>
+        <p>&copy; <span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     <script src="/wdd230/lesson3/scripts/app.js"></script>
     </footer>
 </body>
