--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         </dl>
 </main>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified </p>
-        <p id="date"></p>
+        <p>&copy; <span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     </footer>
 <script src="scripts/app.js"></script>
 </body>
