--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -49,8 +49,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID <(^.^)> Last Modified </p>
-        <p id="date"></p>
+        <p>&copy; <span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     </footer>
     <script src="/wdd230/lesson2/scripts/app.js"></script>
 </body>
