--- a/lesson3/design.html
+++ b/lesson3/design.html
@@ -39,8 +39,7 @@
         </p>
     </main>
     <footer>
-        <p>&copy; <script>document.write(new Date().getFullYear());</script> Mike Helm Pocatello, ID &LT; Last Modified </p>
-        <p id="date"></p>
+        <p>&copy; <span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     <script src="/wdd230/lesson3/scripts/app.js"></script>
     </footer>
 </body>
