fixed picture naming

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-    <img class="profile" src="images/best pic ever-resized.jpg" alt="image" height="auto">
+    <img class="profile" src="images/best-pic-ever-resized.jpg" alt="image" height="auto">
     <h1> Welcome to my WDD230: Assignment Portal</h1>
     </header>
     <main>
