--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <dl>
             <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
             <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce Site Plan</a></li>
-            <li>Week 4: <a href="lessonfour.html">To be delivered soon</a></li>
+            <li>Week 4: <a href="chamber/index.html">Chamber</a></li>
             <li>Week 5: <a href="lessonfive.html">To be delivered soon</a></li>
             <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
             <li>Week 7: <a href="lessonseven.html">To be delivered soon</a></li>
