--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <h1> Welcome to my WDD230: Assignment Portal</h1>
     </header>
     <main>
-        <dl>
+        <ul>
             <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
             <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce Site Plan</a></li>
-            <li>Week 4: <a href="chamber/index.html">Chamber</a></li>
+            <li>Week 4: <a href="chamber/index.html">Chamber</a>,&nbsp;<a href="start-navigation/index.html">Hamburger Button</a></li>
             <li>Week 5: <a href="lessonfive.html">To be delivered soon</a></li>
             <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
             <li>Week 7: <a href="lessonseven.html">To be delivered soon</a></li>
@@ -30,7 +30,7 @@
             <li>Week 9: <a href="lessonnine.html">To be delivered soon</a></li>
             <li>Week 10: <a href="lessonten.html">To be delivered soon</a></li>
             <li>Week 11: <a href="lessoneleven.html">To be delivered soon</a></li>
-        </dl>
+        </ul>
 </main>
     <footer>
         <p>&copy; <span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
