--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,19 +37,19 @@
         </section>
         <section>
         <div class="call to action">Call to action</div>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi nisi quisquam, sit esse, earum obcaecati fuga, maiores incidunt debitis explicabo suscipit itaque architecto molestiae porro nobis dolor ipsa possimus aliquam?
+        <a href="https://unsplash.com/photos/vq1QaWgQtz4" target="blank"><img id="battle" src="images/battle_prep.jpg" alt="call to action" width="300" height="300"></a>
         </section>
         <section>
         <div class="news">News</div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sint ipsa recusandae tempora aliquam, aut in sit ex obcaecati saepe veniam quasi omnis repudiandae, dolore unde asperiores sed maxime aspernatur!
+        <a href="https://www.istockphoto.com/vector/town-crier-gm165517964-24325561" target="_blank"><img id="news here" src="images/town_crier.jpg" alt="news ahead" width="100" height="100"></a>
         </section>
         <section>
         <div class="events">Events</div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere minima voluptate odit modi nulla labore, id, tempora vel rem, provident itaque libero sint. Nostrum aut ullam eos sequi harum facere!
+        <a href="https://unsplash.com/photos/bXbi1jJVDf0" target="_blank"><img id="events" src="images/events.jpg" alt="dinners in the inn" width="100" height="100"></a>
         </section>
         <section>
         <div class="weather">Weather</div>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa vero sapiente ullam soluta aliquid. Enim beatae ducimus, maxime ratione eius, sit magni, architecto qui possimus optio modi cumque hic. Error.
+        <a href="https://unsplash.com/photos/KWTkd7mHqKE" target="_blank"></href><img id="clouds" src="images/clouds.jpg" alt="clouds over the lake" width="100" height="100"></a>
         </section>
         <section>
             <div class="spotlights">
@@ -72,7 +72,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; <span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
+        <img src="images/laketown_logo_resized.jpg" width="50" height="50" alt="Laketown chamber of commerce logo"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth</p><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     </footer>
 <script src="scripts/apps.js"></script>
 <script src="scripts/hamburger.js"></script>
