w5 added chamber javascript
Co-authored-by: crewsbd <crewsbd@users.noreply.github.com>

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <header>
+        <p><div id="day"></div></p>
         <img id="logo" src="images/laketown_logo_resized.jpg" alt="The logo for the Laketown, Middle-Earth Chamber of Commerce">
         <h1> Laketown Chamber of Commerce</h1>
         <div id="current-date">date</div>
@@ -72,7 +73,7 @@
         </section>
     </main>
     <footer>
-        <img src="images/laketown_logo_resized.jpg" width="50" height="50" alt="Laketown chamber of commerce logo"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth</p><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
+        <img src="images/laketown_logo_resized.jpg" width="50" height="50" alt="Laketown chamber of commerce logo"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     </footer>
 <script src="scripts/apps.js"></script>
 <script src="scripts/hamburger.js"></script>
