--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
+    <link rel="icon" href="favicon.ico">
     <title>Laketown Chamber of Commerce</title>
 </head>
 <body>
