added hero image and link to map

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,10 +33,9 @@
         </nav>
     </header>
     <main>
-        <section>
-        <div class="hero">Hero here</div>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut nostrum aliquam explicabo iure dicta, quos, magni exercitationem ea eligendi natus atque minus aspernatur cumque officiis. Sint similique recusandae velit ab?
-        </section>
+        <div class="hero">
+            <img id="hero" src="images/hero.jpg" alt="hero image for laketown chamber of commerce">
+        </div>
         <section>
         <div class="call to action">Call to action</div>
         <a href="https://unsplash.com/photos/vq1QaWgQtz4" target="blank"><img id="battle" src="images/battle_prep.jpg" alt="call to action" width="300" height="300"></a>
@@ -74,7 +73,7 @@
         </section>
     </main>
     <footer>
-        <img src="images/laketown_logo_resized.jpg" width="50" height="50" alt="Laketown chamber of commerce logo"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
+        <img src="images/laketown_logo_resized.jpg" width="50" height="50" alt="Laketown chamber of commerce logo"><a href="https://goo.gl/maps/JtLYFcWp3DSvZvSp9" target="_blank"><p>Location:2 Laketown Way, Laketown, Rhovanion, Middle Earth </p></a><p>&copy;<span id="theCurrentYear"></span> Mike Helm Pocatello, ID &LT;(^.^)> Last Modified <span id="date"></span></p>
     </footer>
 <script src="scripts/apps.js"></script>
 <script src="scripts/hamburger.js"></script>
