--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Week 2: <a href="lesson2/design-principles.html">Design Principles</a></li>
             <li>Week 3: <a href="lesson3">Lake Town Chamber of Human Commerce Site Plan</a></li>
             <li>Week 4: <a href="chamber/index.html">Chamber</a>,&nbsp;<a href="start-navigation/index.html">Hamburger Button</a></li>
-            <li>Week 5: <a href="lessonfive.html">To be delivered soon</a></li>
+            <li>Week 5: <a href="chamber/index.html">Chamber</a>,&nbsp;<a href="lesson5/bom.html">BoM Activity</a></li>
             <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
             <li>Week 7: <a href="lessonseven.html">To be delivered soon</a></li>
             <li>Week 8: <a href="lessoneight.html">To be delivered soon</a></li>
