adjusted weather summary for chamber

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,10 +33,16 @@
         </nav>
     </header>
     <main>
-        <div class="hero">
-            <img id="hero" src="images/hero.jpg" alt="hero image for laketown chamber of commerce">
+        <div class="herodiv">
+            <img id="hero-img" src="images/hero.jpg" alt="hero image for laketown chamber of commerce">
+                <section class="weathersummary">
+                    <h3>Weather Summary</h3>
+                    <a href="https://unsplash.com/photos/KWTkd7mHqKE" target="_blank"></href><img id="clouds" src="images/clouds.jpg" alt="clouds over the lake" width="100" height="100"></a>
+                    <p>Label Value</p>
+                    <p>Label Value</p>
+                    <p>Label Value</p>
+                </section>
         </div>
-        <section>
         <div class="call to action">Call to action</div>
         <a href="https://unsplash.com/photos/vq1QaWgQtz4" target="blank"><img id="battle" src="images/battle_prep.jpg" alt="call to action" width="300" height="300"></a>
         </section>
@@ -47,10 +53,6 @@
         <section>
         <div class="events">Events</div>
         <a href="https://unsplash.com/photos/bXbi1jJVDf0" target="_blank"><img id="events" src="images/events.jpg" alt="dinners in the inn" width="100" height="100"></a>
-        </section>
-        <section>
-        <div class="weather">Weather</div>
-        <a href="https://unsplash.com/photos/KWTkd7mHqKE" target="_blank"></href><img id="clouds" src="images/clouds.jpg" alt="clouds over the lake" width="100" height="100"></a>
         </section>
         <section>
             <div class="spotlights">
