--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,7 +43,8 @@
                     <p>Label Value</p>
                 </section>
         </div>
-        <div class="call to action">Call to action</div>
+        <section>
+        <div class="calltoaction">Call to action</div>
         <a href="https://unsplash.com/photos/vq1QaWgQtz4" target="blank"><img id="battle" src="images/battle_prep.jpg" alt="call to action" width="300" height="300"></a>
         </section>
         <section>
@@ -54,22 +55,16 @@
         <div class="events">Events</div>
         <a href="https://unsplash.com/photos/bXbi1jJVDf0" target="_blank"><img id="events" src="images/events.jpg" alt="dinners in the inn" width="100" height="100"></a>
         </section>
-        <section>
-            <div class="spotlights">
-                <section>
-                    <div class="spotlight1">Spotlight 1</div>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet quidem illo debitis voluptatum corrupti eaque nisi corporis nam cum, atque molestias fuga aliquam veritatis incidunt mollitia doloremque quibusdam in aspernatur!
-                </section>
-                <section>
-                    <div class="spotlight2">Spotlight 2</div>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum corporis autem nulla natus est veritatis voluptas possimus ut molestias rem debitis ratione qui ipsum esse non, vitae voluptatem vero repellat?
-                </section>
-                <section>    
-                    <div class="spotlight3">Spotlight 3</div>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit sed ad soluta eligendi eos obcaecati tenetur quam ratione sequi. Maxime similique voluptatum fugit laudantium ad dicta dolorum, cum culpa atque?
-                </section>
-            </div>
-        </section>
+        <div class="spotlights">
+            <section>
+                <div class="spotlight1">Find 'em All</div>
+                Need a tracker? WE GOT 'EM! Come find us at 15 Laketown Way and we will get you going to find whatever you are looking for! Need to find your dog? A goblin who took your jewelery? Your estranged mother-in-law? No matter the issue we will find em!
+                <div class="spotlight2">Miners Wanted</div>
+                The Miners guild has struck it rich and we need more people to come help! Put in your application at town hall or speak with Bard and he will get you started  
+                <div class="spotlight3">Agricouture</div>
+                Need some fashionable clothes to farm in? We are looking for someone willing to mend and sew new clothes for our farmers in need.
+            </section>
+        </div>
         <section>
         <div class="join">Interested? Join here</div>
         </section>
