--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,43 +39,38 @@
         <section>
             <div class="herodiv">
                 <img src="images/hero.jpg" alt="hero image for laketown chamber of commerce">
-                    <section class="weathersummary">
-                        <h3>Weather Summary</h3>
-                        <a href="https://unsplash.com/photos/KWTkd7mHqKE" target="_blank"><img id="clouds" src="images/clouds.jpg" alt="clouds over the lake" width="100" height="100"></a>
-                        <p>Label Value</p>
-                        <p>Label Value</p>
-                        <p>Label Value</p>
-                    </section>
             </div>
         </section>
         <section>
-        <div class="calltoaction">Call to action</div>
-        <a href="https://unsplash.com/photos/vq1QaWgQtz4" target="blank">call to action</a>
+            <div class="events">Events</div>
+            <a href="https://unsplash.com/photos/bXbi1jJVDf0" target="_blank"><img id="events" src="images/events.jpg" alt="dinners in the inn" width="100" height="100"></a>
         </section>
         <section>
-        <div class="news">News</div>
-        <a href="https://www.istockphoto.com/vector/town-crier-gm165517964-24325561" target="_blank"><img id="news here" src="images/town_crier.jpg" alt="news ahead" width="100" height="100"></a>
+            <h3>Weather Summary</h3>
+            <a href="https://unsplash.com/photos/KWTkd7mHqKE" target="_blank"><img id="clouds" src="images/clouds.jpg" alt="clouds over the lake" width="100" height="100"></a>
         </section>
         <section>
-        <div class="events">Events</div>
-        <a href="https://unsplash.com/photos/bXbi1jJVDf0" target="_blank"><img id="events" src="images/events.jpg" alt="dinners in the inn" width="100" height="100"></a>
+            <div class="news">News</div>
+            <a href="https://www.istockphoto.com/vector/town-crier-gm165517964-24325561" target="_blank"><img id="news here" src="images/town_crier.jpg" alt="news ahead" width="100" height="50"></a>
         </section>
-        <div class="spotlights">
-            <section>
-                <div class="spotlight1">Find 'em All</div>
-                Need a tracker? WE GOT 'EM! Come find us at 15 Laketown Way and we will get you going to find whatever you are looking for! Need to find your dog? A goblin who took your jewelery? Your estranged mother-in-law? No matter the issue we will find em!
-            </section>
-            <section>
-                <div class="spotlight2">Miners Wanted</div>
-                The Miners guild has struck it rich and we need more people to come help! Put in your application at town hall or speak with Bard and he will get you started
-            </section>  
-            <section>
-                <div class="spotlight3">Agricouture</div>
-                Need some fashionable clothes to farm in? We are looking for someone willing to mend and sew new clothes for our farmers in need.
-            </section>
-        </div>
+        <section id="spotlights-section">
+            <div class="spotlights">
+                <section>
+                    <div class="spotlight1">Find 'em All</div>
+                    Need a tracker? WE GOT 'EM! Come find us at 15 Laketown Way and we will get you going to find whatever you are looking for! Need to find your dog? A goblin who took your jewelery? Your estranged mother-in-law? No matter the issue we will find em!
+                </section>
+                <section>
+                    <div class="spotlight2">Miners Wanted</div>
+                    The Miners guild has struck it rich and we need more people to come help! Put in your application at town hall or speak with Bard and he will get you started
+                </section>  
+                <section>
+                    <div class="spotlight3">Agricouture</div>
+                    Need some fashionable clothes to farm in? We are looking for someone willing to mend and sew new clothes for our farmers in need.
+                </section>
+            </div>
+        </section>
         <section>
-        <div class="join">Interested? Join here</div>
+            <div class="join">Interested? Join here</div>
         </section>
     </main>
     <footer>
