--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,11 +47,14 @@
         </section>
         <section>
             <h3>Weather Summary</h3>
-            <a href="https://unsplash.com/photos/KWTkd7mHqKE" target="_blank"><img id="clouds" src="images/clouds.jpg" alt="clouds over the lake" width="100" height="100"></a>
+            <div id="howCold">Wind Chill: </div>
+            <div id="cold">Temperature: </div>
+            <a href="https://unsplash.com/photos/KWTkd7mHqKE" target="_blank"><img id="clouds" src="images/clouds.jpg" alt="clouds over the lake"></a>
+
         </section>
         <section>
             <div class="news">News</div>
-            <a href="https://www.istockphoto.com/vector/town-crier-gm165517964-24325561" target="_blank"><img id="news here" src="images/town_crier.jpg" alt="news ahead" width="100" height="50"></a>
+            <a href="https://www.istockphoto.com/vector/town-crier-gm165517964-24325561" target="_blank"><img id="newshere" src="images/town_crier.jpg" alt="news ahead" width="100" height="50"></a>
         </section>
         <section id="spotlights-section">
             <div class="spotlights">
@@ -78,5 +81,6 @@
     </footer>
 <script src="scripts/apps.js"></script>
 <script src="scripts/hamburger.js"></script>
+<script src="scripts/windchill.js"></script>
 </body>
 </html>
