--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="favicon.ico">
     <title>Laketown Chamber of Commerce</title>
 </head>
-<body>
+<body> 
     <header>
         <p><div id="day"></div>
         <div id="banner">
@@ -36,7 +36,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section id="herooo">
             <div class="herodiv">
                 <img srcset="images/wdd230-org-small.jpg 320vw, 
                 images/wdd230-org-med.jpg 640vw, 
@@ -45,7 +45,7 @@
                 alt="hero image for laketown chamber of commerce">
             </div>
         </section>
-        <section>
+        <section id="whatshappening">
             <div class="events">Events</div>
                 <a href="https://unsplash.com/photos/bXbi1jJVDf0" target="_blank"><img id="events" src="images/events.jpg" alt="dinners in the inn" width="100" height="100"></a>
         </section>
@@ -57,7 +57,7 @@
                     <p>Temperature: <div id="cold">Temperature: </div></p>
             </div>
         </section>
-        <section>
+        <section id="hotoffthepress">
             <div class="news">News</div>
                 <a href="https://www.istockphoto.com/vector/town-crier-gm165517964-24325561" target="_blank"><img id="newshere" src="images/town_crier.jpg" alt="news ahead" width="100" height="50"></a>
         </section>
@@ -77,7 +77,7 @@
                 </section>
             </div>
         </section>
-        <section>
+        <section id="wantin">
             <div class="join">Interested? Join here</div>
         </section>
     </main>
