--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Week 4: <a href="chamber/index.html">Chamber</a>,&nbsp;<a href="start-navigation/index.html">Hamburger Button</a></li>
             <li>Week 5: <a href="chamber/index.html">Chamber</a>,&nbsp;<a href="lesson5/bom.html">BoM Activity</a></li>
             <li>Week 6: <a href="lessonsix.html">To be delivered soon</a></li>
-            <li>Week 7: <a href="lessonseven.html">To be delivered soon</a></li>
+            <li>Week 7: <a href="lesson7/lazyload.html">To be delivered soon</a></li>
             <li>Week 8: <a href="lessoneight.html">To be delivered soon</a></li>
             <li>Week 9: <a href="lessonnine.html">To be delivered soon</a></li>
             <li>Week 10: <a href="lessonten.html">To be delivered soon</a></li>
