fixed javascript link lesson7

--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -17,7 +17,7 @@
     <main>
         <section id="dogone">
             <picture>
-                <img src= "images/boneone.jpg" data-src="images/dog-one.jpg" id="dogone" alt="dogone" width="300" height="400">
+            <img src= "images/boneone.jpg" data-src="images/dog-one.jpg" id="dogone" alt="dogone" width="300" height="400">
             </picture>
         </section>
         <section id="dogtwo">
@@ -44,6 +44,6 @@
     <footer>
         Mike Helm
     </footer>
-<script src="apps.js" defer></script>
+<script src="scripts/apps.js"></script>
 </body>
 </html>
