added update to index chamber and made discover

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,8 +26,8 @@
         <nav>
             <button id='hamburgerBtn'><span>&#9776;</span><span>X</span></button>
             <ul id='primaryNav'>
-                <li><a href="#">Home</a> </li>
-                <li><a href="#">Link1</a></li>
+                <li><a href="index.html">Home</a> </li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="#">Link2</a></li>
                 <li><a href="#">Link3</a></li>
                 <li><a href="https://www.linkedin.com"><img src="images/linkedin_logo.svg" width="20" height="20" alt="linkedin Link"></a></li>
